--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x91df77657ca4653a48b3cc1989ae21c","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"d1b04b666d294879bb70e5efe48b3dc0","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -114,10 +114,10 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 
 ## I hope you will have FUN! We are going to...
 
-- develop applied projects (project-based learning)   
-- acquire computing skills in transport modelling (hands-on learning)   
-- collaborate with your mate (peer-education and think-pair-share)
-- engage in self-learning (flipped classroom)
+- develop **applied projects** (project-based learning)   
+- acquire **computing skills** in transport modelling (hands-on learning)   
+- **collaborate** with your **mate** (peer-education and think-pair-share)
+- engage in **self-learning** (flipped classroom)
 
 .center[
 ![fun](https://media3.giphy.com/media/lmv5aDvwOgTmby3a13/giphy.gif)  
@@ -159,22 +159,46 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 
 ## Let's get serious about modelling!
 
-.pull-left[
+.pull-left-narrow[
+![math](https://media4.giphy.com/media/APqEbxBsVlkWSuFpth/giphy-downsized-medium.gif)  
  
 ]
 
-.pull-right[
+.pull-right-wide[
 .large[
 - What is a model?
 - How does it help?
-- Model transport systems?
+- Why do we model transportation phenomena?
+- Is it easy to model transportation?
+- What is a good model?
+- Where is transportation modelling heading?
+- And this course?
 ]
 ]
+
+---
+
+## What is a model?
+
+---
+
+## How does it help?
+Modelling is an important part of most decision-making processes.
+No real-world interference
+
+.question[
+Representation and analysis of the interactions among **supply**, **demand** and **activity systems**
+]
+
+.question[
+**Design** and **ex-ante evaluation** of transport systems cannot be measured
+]
+
 
 
 ---
 
-## Transportation System Model
+## Why do we model transportation phenomena?
 
 &lt;hr&gt;&lt;/hr&gt;
 
@@ -182,6 +206,142 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 &lt;img src="img/model.png" alt="Cascetta, 2009" width="75%" /&gt;
 &lt;p class="caption"&gt;Cascetta, 2009&lt;/p&gt;
 &lt;/div&gt;
+
+
+---
+
+## Transportation System Model
+
+Focus on the key relationships and the data
+Get the best understanding that we can of the current situation and how this may, with or without our interference, evolve in the future. 
+
+
+Complexity x isolate the key factors that influence the outcome of any action. 
+
+It has many of the key features of the complete structure, but is simplified to aid analysis.
+
+the methods, be they quantitative or qualitative, which allow us to study the relationships that underlie transportation decision-making
+
+descriptive, but more often there is the explicit aim of seeking the key links between causes and effects in transport decision-making either by the providers of transport services or by the users.
+
+Reproudicibility
+Communication
+
+academics focus on developing transport models that offer a reasonable method of exploring the technical efficiency of a transport system (e.g., in terms of traffic flows).
+policy-makers are much more interested in the impacts of various transport actions on different societal groups and that this distributional consideration far outweighs matters of technical efficiency.
+“political modelling" - decisionmakers often adopt models not for their technical merit but rather because they offer a framework akin to their political ideology
+
+in 
+order to model interactions within households such as the sharing 
+and trading of activities, it require data for the entire family and 
+how these interact in their daily transport.
+
+---
+
+
+## Is it easy to model transportation?
+
+&lt;hr&gt;&lt;/hr&gt;
+.large[
+.pull-left[
+.hand[**Supply**]
+- capacity constraints
+- variation across the time dimension
+- dynamic and pseudo-dynamic assignment - queing
+]
+
+
+.pull-right[
+.hand[
+**Demand**
+]
+- trip chaining
+- multiple consumer classes
+]
+]
+
+---
+
+## What is a good model?
+
+This course concerns transport modelling as the study of the behaviour of individuals, associated with the movement of themselves (passenger transport), of commodities (freight transport) or of information via telecommunications.
+
+meets the ideological bent of the ultimate user. It should be said that this
+Models are often complex and highly elaborate, but interestingly history suggests that those models that have exerted the greatest influence have been elegant and simple.
+
+In transport we also find very simple models that have immense use or provide a basis for reflection and thought. There is, for example, Wardrop’s first principle in terms of traffic congestion and Zahavi’s constant time model. The key point is that models seek to isolate key relationships, not to replicate the entire structure.
+
+Good predictions do usually require good models, but in some cases pure chance can lead to fairly accurate predictions.
+
+. There is always the pressure to obtain “good fits” and the accompanying pressure for ex post rationalization.
+Remaining with the issue of forecasting, the use to which the vast majority of models are in practice put, one of the problems in model assessment is that very little ex post analysis has been done on the accuracy of forecasts.
+
+forecasting assessment of models is that it is often more difficult to predict the future values of the explanatory variables than it is to predict the transport effects that are of interest.
+
+Causality was seen as less relevant than forecasting performance. Indeed such aggregate correlations are often inaccurate and result is what is known as the fallacy of ecological correlation (or reversal of signs).
+
+understanding the relationships that influence travel behaviour have moved to the forefront of much of the modelling effort.
+This is largely because the issues confronting policymakers have changed. There is now more concern with managing transport than with accommodating transport. This poses a whole new series of questions that require proactive policy measures rather than a simple provision of roads, berths, runways and other infrastructure.
+
+why goods are being shipped, why people choose to travel at a specified time, why employers move to given area and why they use a specific freight transport mode is one side of an argument to move to a greater use of behaviourally rich models.
+Linked to this was the needed to develop models that would forecast the impacts of new provision on transport use, so that effective assessments could be made, usually within a broad cost–benefit framework.
+
+Social, environmental and economic pressures make it difficult to significantly expand the provision of transport infrastructure in many countries. In addition, new life-styles, advanced production management techniques, the much greater importance of the service economy and new working practices remove many of the constraints that formerly led to peaking.
+The consequent move to policy measures designed to make the best use of existing capacity, including its physical maintenance, requires models that will allow for people being able to change the times at which they travel and for the new logistics on the freight side. The growth in non-work travel, flexitime and longer shopping and personal business hours has also shifted the spotlight away from the need for fixed peak hour models.
+intelligent transport system (ITS)
+
+
+---
+
+## Where is transportation modelling heading?
+
+
+All these systems are designed to get more capacity or better performance out of the transport system, and place fresh demands on modelling the response of providers and users of transport to this new information. A
+ML
+What kinds of data are needed to respond to these emerging issues of transport management, mobility and provision? As the issues have broadened, and thrown more weight onto individuals, companies and their choice, it has become clearer that these agents do not necessarily make the same choices year after year
+
+The long-standing assumption that model parameters are largely invariant with time, or at least change slowly, is much less easy to defend. We have already seen some efforts made at addressing this issue by means of the temporal study of panels of people. In terms of passenger transport, these panels have been set up to trace out such things as how and when vehicles are acquired or disposed of, what effects the family life cycle has on travel and activity behaviour and how stable travel and location choices remain over time. Consequently, panel survey methods are now being used, and the necessary analysis approaches and models are being developed. This greater appreciation of change has also led to support for collecting travel survey data on a continuous basis, rather than once every ten years.
+
+In addition to the focus on individuals, it is increasingly being recognized that institutions and their decisions need to be modelled more fully. Disagregatted
+
+, as mentioned earlier, many transport networks used to have their capacities defined by peak-volume commuter traffic, this is no longer the case. Freight transport, for instance, often poses congestion problems on the roads and leisure traffic imposes pressure on airport capacity
+
+e trade-off between modelling relevance and modelling complexity. I
+
+ How many population strata or types of people do we need to achieve a good representation and understanding of a problem?  In how much detail do we need to measure certain variables to replicate a given phenomenon?  Space is crucial in transport; at what level of detail do we need to code the origin and destination of travellers to model their trip making behaviour?
+
+
+in very many cases the nature of the data restricts the choice of model to a single option.
+
+
+---
+
+## And this course?
+
+**Course outline**
+
+- Fundamental concepts and principles of **discrete choice modelling**   
+- **Accessibility-oriented planning** and **LUTI** (Land use and Transport integrated models)   
+- **Causal inference** in transportation modelling   
+- Forecasting and **backcasting** planning approaches   
+- Modelling **networks as complex systems**   
+- Methods for **Evaluation** and **Comparison** of Transportation System Projects   
+
+---
+
+## Homework for next week
+
+**Reading**   
+Cascetta (2009) - Chapter 1: Modeling Transportation Systems: Preliminary Concepts and Application Areas   
+Hensher (2010) - Chapter 2: History of Demand Modelling
+
+**Lab**   
+Computer lab 1: review of the four-stage model
+
+**In retrospect... or learning backlog**   
+Introduction to R
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
