--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"d1b04b666d294879bb70e5efe48b3dc0","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2f3fde98d034edeaa5581b7381be45f","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -82,6 +82,7 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 ---
 
 ## If you are here, I expect you to know a little bit of.... 
+&lt;hr&gt;&lt;/hr&gt;
 
 .pull-left[
 **Algebra**   
@@ -113,6 +114,7 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 ---
 
 ## I hope you will have FUN! We are going to...
+&lt;hr&gt;&lt;/hr&gt;
 
 - develop **applied projects** (project-based learning)   
 - acquire **computing skills** in transport modelling (hands-on learning)   
@@ -126,6 +128,7 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 ---
 
 ## You'll be able to.... 
+&lt;hr&gt;&lt;/hr&gt;
 
 -	**Explain** the complexity of modelling heavily utilised transport systems and networks, both verbally and in writing.
 
@@ -138,6 +141,7 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 ---
 
 ## Grading Policy
+&lt;hr&gt;&lt;/hr&gt;
 
 - **15%** of your grade will be determined by your **attendance** and **participation** in the **intermediate seminars**.
 
@@ -152,12 +156,14 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 ---
 
 ## Everything is in the Syllabus
+&lt;hr&gt;&lt;/hr&gt;
 
 &lt;img src="img/syllabus.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## Let's get serious about modelling!
+&lt;hr&gt;&lt;/hr&gt;
 
 .pull-left-narrow[
 ![math](https://media4.giphy.com/media/APqEbxBsVlkWSuFpth/giphy-downsized-medium.gif)  
@@ -167,7 +173,6 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 .pull-right-wide[
 .large[
 - What is a model?
-- How does it help?
 - Why do we model transportation phenomena?
 - Is it easy to model transportation?
 - What is a good model?
@@ -180,9 +185,46 @@ Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https
 
 ## What is a model?
 
+&lt;hr&gt;&lt;/hr&gt;
+.large[
+a usually miniature representation of something
+
+a system of postulates, data, and inferences presented as a mathematical description of an entity or state of affairs
+
+an example for imitation or emulation
+
+a person or thing that serves as a pattern for an artist
+]
+.small[
+Source: https://www.merriam-webster.com/dictionary/model
+]
+
+
+
 ---
 
-## How does it help?
+## What is a model?
+
+&lt;hr&gt;&lt;/hr&gt;
+.large[
+~~a usually miniature representation of something~~
+
+**a system of postulates, data, and inferences presented as a mathematical description of an entity or state of affairs**
+
+~~an example for imitation or emulation~~
+
+~~a person or thing that serves as a pattern for an artist~~
+]
+.small[
+Source: https://www.merriam-webster.com/dictionary/model
+]
+
+
+
+---
+
+## Why do we model transportation phenomena?
+
 Modelling is an important part of most decision-making processes.
 No real-world interference
 
@@ -194,11 +236,14 @@ Representation and analysis of the interactions among **supply**, **demand** and
 **Design** and **ex-ante evaluation** of transport systems cannot be measured
 ]
 
+In order to model interactions within households such as the sharing and trading of activities, it require data for the entire family and 
+how these interact in their daily transport.
 
+Get the best understanding that we can of the current situation and how this may, with or without our interference, evolve in the future. 
 
----
+the methods, be they quantitative or qualitative, which allow us to study the relationships that underlie transportation decision-making
 
-## Why do we model transportation phenomena?
+descriptive, but more often there is the explicit aim of seeking the key links between causes and effects in transport decision-making either by the providers of transport services or by the users.
 
 &lt;hr&gt;&lt;/hr&gt;
 
@@ -208,33 +253,9 @@ Representation and analysis of the interactions among **supply**, **demand** and
 &lt;/div&gt;
 
 
----
-
-## Transportation System Model
-
-Focus on the key relationships and the data
-Get the best understanding that we can of the current situation and how this may, with or without our interference, evolve in the future. 
 
 
-Complexity x isolate the key factors that influence the outcome of any action. 
 
-It has many of the key features of the complete structure, but is simplified to aid analysis.
-
-the methods, be they quantitative or qualitative, which allow us to study the relationships that underlie transportation decision-making
-
-descriptive, but more often there is the explicit aim of seeking the key links between causes and effects in transport decision-making either by the providers of transport services or by the users.
-
-Reproudicibility
-Communication
-
-academics focus on developing transport models that offer a reasonable method of exploring the technical efficiency of a transport system (e.g., in terms of traffic flows).
-policy-makers are much more interested in the impacts of various transport actions on different societal groups and that this distributional consideration far outweighs matters of technical efficiency.
-“political modelling" - decisionmakers often adopt models not for their technical merit but rather because they offer a framework akin to their political ideology
-
-in 
-order to model interactions within households such as the sharing 
-and trading of activities, it require data for the entire family and 
-how these interact in their daily transport.
 
 ---
 
@@ -242,9 +263,10 @@ how these interact in their daily transport.
 ## Is it easy to model transportation?
 
 &lt;hr&gt;&lt;/hr&gt;
+
 .large[
 .pull-left[
-.hand[**Supply**]
+
 - capacity constraints
 - variation across the time dimension
 - dynamic and pseudo-dynamic assignment - queing
@@ -252,9 +274,8 @@ how these interact in their daily transport.
 
 
 .pull-right[
-.hand[
-**Demand**
-]
+- complexity
+- behavioural - derived demand
 - trip chaining
 - multiple consumer classes
 ]
@@ -263,24 +284,30 @@ how these interact in their daily transport.
 ---
 
 ## What is a good model?
+&lt;hr&gt;&lt;/hr&gt;
 
-This course concerns transport modelling as the study of the behaviour of individuals, associated with the movement of themselves (passenger transport), of commodities (freight transport) or of information via telecommunications.
-
-meets the ideological bent of the ultimate user. It should be said that this
 Models are often complex and highly elaborate, but interestingly history suggests that those models that have exerted the greatest influence have been elegant and simple.
 
-In transport we also find very simple models that have immense use or provide a basis for reflection and thought. There is, for example, Wardrop’s first principle in terms of traffic congestion and Zahavi’s constant time model. The key point is that models seek to isolate key relationships, not to replicate the entire structure.
+The key point is that models seek to isolate key relationships, not to replicate the entire structure.
 
-Good predictions do usually require good models, but in some cases pure chance can lead to fairly accurate predictions.
+Focus on the key relationships and the data
 
-. There is always the pressure to obtain “good fits” and the accompanying pressure for ex post rationalization.
+
+Complexity x isolate the key factors that influence the outcome of any action. 
+
+It has many of the key features of the complete structure, but is simplified to aid analysis.
+
+academics focus on developing transport models that offer a reasonable method of exploring the technical efficiency of a transport system (e.g., in terms of traffic flows).
+policy-makers are much more interested in the impacts of various transport actions on different societal groups and that this distributional consideration far outweighs matters of technical efficiency.
+“political modelling" - decisionmakers often adopt models not for their technical merit but rather because they offer a framework akin to their political ideology
+
 Remaining with the issue of forecasting, the use to which the vast majority of models are in practice put, one of the problems in model assessment is that very little ex post analysis has been done on the accuracy of forecasts.
 
-forecasting assessment of models is that it is often more difficult to predict the future values of the explanatory variables than it is to predict the transport effects that are of interest.
+Forecasting assessment of models is that it is often more difficult to predict the future values of the explanatory variables than it is to predict the transport effects that are of interest.
 
-Causality was seen as less relevant than forecasting performance. Indeed such aggregate correlations are often inaccurate and result is what is known as the fallacy of ecological correlation (or reversal of signs).
+**Causality** was seen as less relevant than forecasting performance. Indeed such aggregate correlations are often inaccurate and result is what is known as the fallacy of ecological correlation (or reversal of signs).
 
-understanding the relationships that influence travel behaviour have moved to the forefront of much of the modelling effort.
+understanding the **relationships** that influence travel behaviour have moved to the forefront of much of the modelling effort.
 This is largely because the issues confronting policymakers have changed. There is now more concern with managing transport than with accommodating transport. This poses a whole new series of questions that require proactive policy measures rather than a simple provision of roads, berths, runways and other infrastructure.
 
 why goods are being shipped, why people choose to travel at a specified time, why employers move to given area and why they use a specific freight transport mode is one side of an argument to move to a greater use of behaviourally rich models.
@@ -289,7 +316,8 @@ Linked to this was the needed to develop models that would forecast the impacts 
 Social, environmental and economic pressures make it difficult to significantly expand the provision of transport infrastructure in many countries. In addition, new life-styles, advanced production management techniques, the much greater importance of the service economy and new working practices remove many of the constraints that formerly led to peaking.
 The consequent move to policy measures designed to make the best use of existing capacity, including its physical maintenance, requires models that will allow for people being able to change the times at which they travel and for the new logistics on the freight side. The growth in non-work travel, flexitime and longer shopping and personal business hours has also shifted the spotlight away from the need for fixed peak hour models.
 intelligent transport system (ITS)
-
+Reproudicibility
+Communication
 
 ---
 
@@ -339,7 +367,7 @@ Hensher (2010) - Chapter 2: History of Demand Modelling
 Computer lab 1: review of the four-stage model
 
 **In retrospect... or learning backlog**   
-Introduction to R
+Introduction to R and basic statistics
 
 
     </textarea>
