--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"f2e91a9f327940c896a2ec85c4a2e3f9","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"fe653fb8981e4d2aaffe75c06629d72c","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -468,7 +468,9 @@ https://retaoliveira.github.io/places
 
 ]
 
-
+.center[.larger[
+THANK YOU!!!!!
+]]
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
