--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libs/panelset/panelset.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"fe653fb8981e4d2aaffe75c06629d72c","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2b8a6559be049bba3c8963be98c1923","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -75,7 +75,7 @@ background-size: 30%
 Fridays - 17:00   
 Spring 2022   
 Discussion channels: [Discord]( https://discord.gg/csPCPXdJ)   
-Assincronous content: [https://retaoliveira.github.io/places/courses/atm/](https://retaoliveira.github.io/places/courses/atm/)
+Asynchronous content: [https://retaoliveira.github.io/places/courses/atm/](https://retaoliveira.github.io/places/courses/atm/)
 
 **Prof. Renata Oliveira**
 
